npm run generate:server:version --oas-version=pr-134
