# server/openapi_server/models/start_date_range.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class StartDateRange(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, start_date=None, end_date=None):  # noqa: E501
+        """StartDateRange - a model defined in OpenAPI
+
+        :param start_date: The start_date of this StartDateRange.  # noqa: E501
+        :type start_date: date
+        :param end_date: The end_date of this StartDateRange.  # noqa: E501
+        :type end_date: date
+        """
+        self.openapi_types = {
+            'start_date': date,
+            'end_date': date
+        }
+
+        self.attribute_map = {
+            'start_date': 'startDate',
+            'end_date': 'endDate'
+        }
+
+        self._start_date = start_date
+        self._end_date = end_date
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'StartDateRange':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The startDateRange of this StartDateRange.  # noqa: E501
+        :rtype: StartDateRange
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def start_date(self):
+        """Gets the start_date of this StartDateRange.
+
+        Start date of the date range  # noqa: E501
+
+        :return: The start_date of this StartDateRange.
+        :rtype: date
+        """
+        return self._start_date
+
+    @start_date.setter
+    def start_date(self, start_date):
+        """Sets the start_date of this StartDateRange.
+
+        Start date of the date range  # noqa: E501
+
+        :param start_date: The start_date of this StartDateRange.
+        :type start_date: date
+        """
+
+        self._start_date = start_date
+
+    @property
+    def end_date(self):
+        """Gets the end_date of this StartDateRange.
+
+        End date of the date range  # noqa: E501
+
+        :return: The end_date of this StartDateRange.
+        :rtype: date
+        """
+        return self._end_date
+
+    @end_date.setter
+    def end_date(self, end_date):
+        """Sets the end_date of this StartDateRange.
+
+        End date of the date range  # noqa: E501
+
+        :param end_date: The end_date of this StartDateRange.
+        :type end_date: date
+        """
+
+        self._end_date = end_date
